[package]
name = "crab_torrent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.12.11", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.15"
sha1 = "0.10.6"
url = "2.5.4"
urlencoding = "2.1.3"
